# rustbin

./: .gitignore  .travis.yaml  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
examples/: rustbin_me.rs
src/: dos.rs  lib.rs  main.rs  rustbin_me.rs  types.rs  utils.rs
src/errors/: length.rs  mod.rs
src/pe/: dos.rs  export.rs  file.rs  import.rs  mod.rs  optional.rs  relocs.rs  rsrc.rs  section.rs
src/pe/import/: mod.rs  x64.rs  x86.rs
src/pe/optional/: mod.rs  x64.rs  x86.rs
src/pe/rsrc/: tests.rs
src/pe/ser/: min.rs  mod.rs
src/pe/ser/full/: dos.rs  export.rs  file.rs  import.rs  mod.rs  optional.rs  relocs.rs
src/pe/ser/min/: tests.rs
tests/: integration_test.rs
