[package]
name = "rustbin"
version = "0.5.2"
authors = ["Sunil Kumar <badboy16a@gmail.com>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = { version="2", features = ["serde"] }
byteorder = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version ="1.0.108", optional = true }
clap = { version = "4.4.12", features = ["derive"] }

[features]
default=["json"]
json = ["dep:serde_json"]

[dev-dependencies]
serde_test = "1"

[lib]
name = "rustbin"
path = "src/lib.rs"


[[bin]]
name = "rustbin"
path = "src/main.rs"
