[package]
name = "rustbin"
description = "Parsers for binary file formats (mostly Windows related)."
version = "0.6.0"
authors = ["Sunil Kumar <badboy16a@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/sunilkr/rustbin"
keywords = ["pe", "parser", "windows"]
categories = ["windows", "parser"]
exclude = [
    ".*",
    ".*/*",
    "*.json",
    "test-data/*"
]

[dependencies]
bitflags = { version="2", features = ["serde"] }
byteorder = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version ="1.0.108", optional = true }
clap = { version = "4.4.12", features = ["derive"] }

[features]
default=["json"]
json = ["dep:serde_json"]

[dev-dependencies]
serde_test = "1"

[lib]
name = "rustbin"
path = "src/lib.rs"


[[bin]]
name = "rustbin"
path = "src/main.rs"
