[package]
name = "rustbin"
description = "Parsers for binary file formats (mostly Windows related)."
version = "0.7.0"
authors = ["Sunil Kumar <badboy16a@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/sunilkr/rustbin"
keywords = ["pe", "parser", "windows"]
categories = ["parser-implementations"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "Cargo.lock",
]

[dependencies]
bitflags = { version="2", features = ["serde"] }
byteorder = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version ="1", optional = true }
clap = { version = "4.5", features = ["derive"] }
derivative = "2.2"
num-traits = "0.2"
thiserror = "1.0"

[features]
default=["json"]
json = ["dep:serde_json"]

[dev-dependencies]
serde_test = "1"

[lib]
name = "rustbin"
path = "src/lib.rs"

[[bin]]
name = "rustbin"
path = "src/main.rs"
